# SemanticAlgo

./: entity_finder.py  semantic_finder.py  transcript_0EVVKs6DQLo.txt  transcript_0Kx3sobEBFE.txt  transcript_0yW7w8F2TVA.txt  transcript_34Na4j8AVgA.txt  transcript_450p7goxZqg.txt  transcript_7Azv0G85lh8.txt  transcript_87gWaABqGYs.txt  transcript_ANS9sSJA9Yc.txt  transcript_CEw-7cMnBDY.txt  transcript_CTFtOOh47oo.txt  transcript_FTQbiNvZqaY.txt  transcript_JFm7YDVlqnI.txt  transcript_LHCob76kigA.txt  transcript_OpQFFLBMEPI.txt  transcript_SC4xMk98Pdc.txt  transcript_SXiSVQZLje8.txt  transcript_Tc0tLGWIqxA.txt  transcript_UceaB4D0jpo.txt  transcript_V1Pl8CzNzCw.txt  transcript_XXYlFuWEuKI.txt  transcript_adLGHcj_fmA.txt  transcript_b8m9zhNAgKs.txt  transcript_bo_efYhYU2A.txt  transcript_bvWRMAU6V-c.txt  transcript_dNCWe_6HAM8.txt  transcript_dT2owtxkU8k.txt  transcript_fKopy74weus.txt  transcript_foE1mO2yM04.txt  transcript_fzeWc3zh01g.txt  transcript_gNi_6U5Pm_o.txt  transcript_hmUyEDG7Jy0.txt  transcript_l0U7SxXHkPY.txt  transcript_nYh-n7EOtMA.txt  transcript_plNmaCuPSYw.txt  transcript_qN4ooNx77u0.txt  transcript_rn9Hx6JhDUs.txt  transcript_ru0K8uYEZWw.txt  transcript_scraper.py  (+6 more)
Entity_Extract_Project/: entity_finder.py  openai_semantic_finder.py  semantic_finder.py  transcript_scraper.py
MyProject/: CMakeLists.txt
MyProject/include/: foo.h
MyProject/src/: foo.cpp  main.cpp
MyProject/tests/: test_foo.cpp
entities/: entity_transcript_5jNfDr-_P_Q.txt  entity_transcript_HXXoO0FwUKQ.txt  entity_transcript_IwBYnjVubW4.txt  entity_transcript_PAv3wUDxi4g.txt  (+1 more)
(+10 files in other folders)
